...
  Future<void> _checkUser() async {
    _log.info("Checking user...");
    _setAuthStatus(AuthStatus.Initializing);

    // read shared preference to get any e-mail and JWT
    final SharedPreferences _prefs = await SharedPreferences.getInstance();
    final String? _email = _prefs.getString('email');
    final String? _jwt = _prefs.getString('jwt');

    // no e-mail found in shared preferences, it means user has to identify
    if (_email == null) {
      _log.info("Email not found in shared preferences");
      _setLoginStatus(LoginStatus.EmailStep);
      _setAuthStatus(AuthStatus.Unauthenticated);
...
