...

    return UnauthenticatedLayout(
      title: AppString.enterPasscode,
      body: PasscodeWidget(),
      actions: <Widget>[
        TextButton(
          key: Key('useAnotherEmailAddressButton'),
          onPressed: () {
            _passcodeProvider.loginPassCode = null;
            // logout so that the shared preferences are cleared
            _loginProvider.logoutMember();
            _loginProvider.goToPreviousLoginStep();
          },
...
